# VisualEngine

./: .gitignore  README.md
.claude/: settings.local.json
VisualEngine/: EngineGlobals.h  VisualEngine.cpp  VisualEngine.h
VisualEngine/inputManagement/: Camera.cpp  Camera.h  Collision.cpp  Collision.h  Raycasting.h
VisualEngine/memoryManagement/: memory.h  registry.h  save.cpp  setup.cpp  worldData.cpp
VisualEngine/renderingManagement/: ChunkMesh.cpp  ChunkMesh.h  DefaultShaders.h  Highlight.cpp  Mesh.cpp  Overlay.cpp  RenderLoop.cpp  RenderLoop.h  Scene.cpp  Shader.cpp  Texture.cpp  main.cpp  render.h
beta-1.0/: CMakeLists.txt  CMakePresets.json  build.bat  build_output.txt  run.bat
beta-1.0/AbstractModels/: BB.glb  G.glb  HH.glb
beta-1.0/assets/: player.glb
beta-1.0/assets/collisionTypes/: river.json  water.json
beta-1.0/assets/entities/blockModels/: sh.glb
beta-1.0/assets/entities/blocks/: TestBlock.json  bareStone.json  deepWater.json  denseForest.json  desert.json  dryGrass.json  dryHills.json  forest.json  grassBlock.json  mossyStone.json  mountainPeak.json  river.json  riverBank.json  sand.json  sh.json  shallowWater.json  snowyPeak.json  stoneBlock.json  swamp.json  waterBlock.json
beta-1.0/build_msvc/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake  compile_commands.json
beta-1.0/build_msvc/saves/blocks/: hs.sav
beta-1.0/saves/blocks/: 23.sav  3.sav  3t.sav  gg.sav  h.sav
beta-1.0/saves/sprites/: h.sav
beta-1.0/saves/structures/: 2.sav  gh.sav  tg.sav
beta-1.0/src/: test_engine.cpp
beta-1.0/src/3DSprite/: 3DSprite.cpp
beta-1.0/src/engine/: engine.h
beta-1.0/src/engine/core/: json.h  save.h  tile_rng.h  world.h  world_actions.h
beta-1.0/src/engine/default/: camera.h  input.h  inventory_ui.h
beta-1.0/src/engine/gameplay/: collision.h  collision_effects.h  entity.h  gravity.h  inventory.h  registry.h  sprite.h
beta-1.0/src/engine/information/: ENGINE_REFERENCE.txt  EXAMPLES.txt  FOLDER_EXPECTATIONS.txt  SETUP.txt
beta-1.0/src/exports/: G.glb
beta-1.0/src/game/: main.cpp
beta-1.0/src/game/entities/: player.h
beta-1.0/src/game/world/: spring_river_system.cpp  spring_river_system.h  terrain_gen.h  worldgen_common.h
beta-1.0/src/mapCreator/: block_ui.h  creator.cpp  editor_model.h  editor_structure.h  glb_export.h  gradient_sky.h  menu_ui.h  placed_blocks.h  save_system.h
beta-1.0/src/mapCreatorV2/: block_ui.h  creator2.cpp  editor_camera.h  editor_model.h  editor_sprite.h  editor_structure.h  glb_export.h  placed_blocks.h  save_system.h  screen_load.h  screen_menu.h  screen_naming.h
beta-2.0/: overview.txt
beta-2.0/VisualEngine/: EngineGlobals.h  VisualEngine.cpp  VisualEngine.h
beta-2.0/VisualEngine/information/: api_reference.md  requirements.md
beta-2.0/VisualEngine/inputManagement/: Camera.cpp  Camera.h  Collision.cpp  Collision.h  Raycasting.cpp  Raycasting.h
beta-2.0/VisualEngine/memoryManagement/: ModelData.h  memory.cpp  memory.h
beta-2.0/VisualEngine/renderingManagement/: ChunkMesh.cpp  ChunkMesh.h  DefaultShaders.h  DotRenderer.cpp  DotRenderer.h  DotShaders.h  GradientBackground.cpp  GradientBackground.h  GradientShaders.h  LineRenderer.cpp  LineShaders.h  Mesh.cpp  Overlay.cpp  Overlay.h  RenderLoop.cpp  RenderToTexture.cpp  Scene.cpp  Shader.cpp  Texture.cpp  render.h
beta-2.0/VisualEngine/renderingManagement/effects/: GradientBackground.cpp  RenderToTexture.cpp  RenderToTexture.h
beta-2.0/VisualEngine/renderingManagement/meshing/: ChunkMesh.cpp  ChunkMesh.h  Overlay.cpp  Overlay.h
beta-2.0/VisualEngine/renderingManagement/primitives/: DotRenderer.cpp  DotShaders.h  LineRenderer.cpp  LineRenderer.h  LineShaders.h
beta-2.0/VisualEngine/sceneManagement/: SceneManager.cpp  SceneManager.h
beta-2.0/VisualEngine/uiManagement/: TextRenderer.cpp  TextRenderer.h  TextShaders.h  UIElement.h  UIManager.cpp  UIManager.h  UIPrefabs.cpp  UIPrefabs.h  UIRenderer.cpp  UIRenderer.h  UIShaders.h
beta-2.0/assets/: cube.mesh
beta-2.0/modelEditor/: CMakeLists.txt  build.bat  cubeData.h  dist_run.bat  main.cpp  run.bat  setUpAPI.bat
beta-2.0/modelEditor/information/: reference.md
beta-2.0/modelEditor/src/: Highlight.cpp  Highlight.h  Selection.cpp  Selection.h  scenes.cpp
beta-2.0/modelEditor/src/mechanics/: GltfExporter.cpp  GltfExporter.h  Highlight.cpp  Highlight.h  scenes.cpp  scenes.h  setup.cpp  setup.h
beta-2.0/modelEditor/src/mechanics/AiHandling/: AiHandling.cpp  AiHandling.h  AiProcess.cpp  AiProcess.h  AiTools.cpp  AiTools.h  agent.py
beta-2.0/modelEditor/src/mechanics/export/: GltfExporter.cpp  GltfExporter.h  TexturePacking.cpp  TexturePacking.h
beta-2.0/modelEditor/src/mechanics/interaction/: Highlight.cpp
beta-2.0/modelEditor/src/prefabs/: EmbeddedSelectors.h  templates.cpp  templates.h
beta-2.0/modelEditor/src/prefabs/3D_modeler/: prefab_cube.h  prefab_wedge.h
beta-2.0/modelEditor/src/scenes/: 3dModeler.cpp  3dModeler.h  SceneData.h  createScene.cpp  createScene.h  menu.cpp  menu.h  vectorMesh.cpp  vectorMesh.h
modelEditor/: CMakeLists.txt  build.bat  cubeData.h  exportMesh.cpp  main.cpp  run.bat
modelEditor/src/: Highlight.cpp
